tests/testcases/errors/BCE0089-6.boo
"""
BCE0089-6.boo(9,11): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
class Foo:

	def bar():
		pass
	
	event bar as System.EventHandler
